# ic3-scrape

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.Dockerfile  test_delete_this.py
configs/: config.yml
service/: exporter.py  ic3_scraper.py
service/utils/: setup_logging.py
tests/: test_ic3_scraper.py
tests/test_files/: expected_scraped_data.py  ic3_report_page_example.html
